Retrieving the question info.
